misc [platform]: less noisy `DirectoryLock` logging + cleanup (quick fixes)
GitOrigin-RevId: e6c92df753801042462bde51d9332cde29fca5a2